--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,7 @@
 
 html {
   font-size: 16px;
+  font-family: "Ubuntu", "Helvetica", sans-serif;
 }
 
 .flex-container {
@@ -12,7 +13,7 @@ html {
 /* Header Rules */
 
 header {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #7F0200;
   box-shadow: 0px 2px 10px #7F0200;
   background-color: #7F0200;
   color: white;
@@ -37,10 +38,6 @@ header {
   font-size: 1.5rem;
 }
 
-.colmar {
-
-}
-
 .academy {
   color: gold;
 }
@@ -55,12 +52,43 @@ header ul li {
   padding-right: 24px;
 }
 
-
-
-/* Learn Something Rules */
+/* Banner Rules */
 
 main {
-  margin-top: 5rem;
+  margin-top: 6rem;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+}
+
+main img {
+  width: 60%;
+  margin-right: 24px;
+}
+
+.learn-text-box {
+  max-width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.learn-something {
+  color: gold;
+}
+
+.school-day {
+  font-weight: lighter;
+}
+
+.start-here {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 40%;
+  background-color: #7F0200;
+  text-align: center;
+  color: white;
 }
 
 /* Info Rules */
