--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,11 +6,14 @@ html {
 }
 
 body {
-  width:
+  width: 95%
 }
 
 section {
   margin-top: 32px;
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 100%;
 }
 
 .flex-container {
@@ -64,11 +67,16 @@ header ul li {
   padding-right: 24px;
 }
 
+header ul li:hover {
+  color: gold;
+  transition: all 0.25s linear;
+  text-shadow: 0 0 10px;
+}
+
 /* Banner Rules */
 
 main {
-  margin-top: 6rem;
-  margin-left: 24px;
+  margin-top: 96px;
   margin-right: 24px;
   margin-bottom: 24px;
   display: flex;
@@ -97,6 +105,11 @@ main img {
   background-color: #7F0200;
   text-align: center;
   color: white;
+}
+
+.start-here:hover {
+  background-color: gold;
+  transition: all 0.25s linear;
 }
 
 /* Info Rules */
@@ -136,9 +149,15 @@ main img {
   padding: 16px;
 }
 
+
 .info-box {
   display: flex;
   align-items: center;
+}
+
+.info-box:hover {
+  box-shadow: 0 0 10px;
+  transition: all 0.25s linear;
 }
 
 .info-text {
@@ -160,8 +179,10 @@ main img {
   text-align: center;
   background-color: whitesmoke;
   margin-top: 0;
+  margin-left: 0;
   padding-top: 24px;
   padding-bottom: 24px;
+  left: 0;
 }
 
 .course-parent {
@@ -171,6 +192,11 @@ main img {
   width: 80%;
   height: 100%;
   justify-content: center;
+}
+
+.course-child:hover {
+  box-shadow: 0 0 10px;
+  transition: all 0.25s linear;
 }
 
 .course-child {
@@ -214,6 +240,7 @@ main img {
 /* Footer Rules */
 
 footer {
+  width: 103%;
   background-color: lightgrey;
   padding-bottom: 6rem;
   padding-top: 2rem;
