--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,12 @@
+/*
+
+To do list:
+1. Fix border and width problems.
+
+*/
+
+
+
 /* General Rules */
 
 html {
@@ -6,13 +15,13 @@ html {
 }
 
 body {
-  width: 95%
+  width: 100%
 }
 
 section {
-  margin-top: 32px;
-  padding-left: 24px;
-  padding-right: 24px;
+  margin-top: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   width: 100%;
 }
 
@@ -20,14 +29,25 @@ section {
   display: flex;
 }
 
-.temp-container {
-  width: 2px;
-}
-
 .gold {
   color: gold;
 }
 
+/* Responsive General Rules */
+
+@media only screen and (max-width: 650px) {
+
+  #desktopimage {
+    display: none;
+  }
+
+  #mobileimage {
+    display: inline-block;
+    width: 100%;
+    padding: 0;
+  }
+
+}
 
 /* Header Rules */
 
@@ -36,7 +56,7 @@ header {
   box-shadow: 0px 2px 10px #7F0200;
   background-color: #7F0200;
   color: white;
-  height: 64px;
+  height: 4rem;
   width: 100%;
   display: flex;
   align-items: center;
@@ -52,19 +72,19 @@ header {
   position:inherit;
   vertical-align: baseline;
   margin: 0;
-  padding: 65px;
+  padding-left: 4rem;
   border: 0;
   font-size: 1.5rem;
 }
 
 header img {
-  padding-left: 24px;
+  padding-left: 1.5rem;
 }
 
 
 header ul li {
   display: inline-block;
-  padding-right: 24px;
+  padding-right: 1.5rem;
 }
 
 header ul li:hover {
@@ -73,19 +93,70 @@ header ul li:hover {
   text-shadow: 0 0 10px;
 }
 
+a {
+  text-decoration: none;
+  color: gold;
+}
+
+/* Responsive Header Rules */
+
+.mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 650px) {
+  .desktop {
+    display:none;
+  }
+
+  header {
+    background-color: white;
+    box-shadow: 0 0 10px #7F0200;
+  }
+
+  .logo {
+    display:none;
+  }
+
+  .logo {
+    flex-grow: 0;
+  }
+
+  .mobile {
+    background-color: white;
+    display:flex;
+    flex-grow:1;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  nav img {
+    border-radius:0;
+  }
+
+  nav {
+    padding:0;
+  }
+
+  nav span {
+    padding:0;
+  }
+}
+
 /* Banner Rules */
 
 main {
-  margin-top: 96px;
-  margin-right: 24px;
-  margin-bottom: 24px;
+  width: 100%;
+  margin-top: 6rem;
+  margin-right: 1.5rem;
+  margin-bottom: 1.5rem;
   display: flex;
   align-items: center;
 }
 
 main img {
   width: 60%;
-  margin-right: 24px;
+  margin-right: 1.5rem;
 }
 
 .learn-text-box {
@@ -99,8 +170,8 @@ main img {
 }
 
 .start-here {
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   width: 40%;
   background-color: #7F0200;
   text-align: center;
@@ -112,13 +183,42 @@ main img {
   transition: all 0.25s linear;
 }
 
+/* Banner Responsive Rules */
+
+@media only screen and (max-width: 650px) {
+
+  main {
+    width: 100%;
+    margin: 4.5rem 0 0 0;
+    padding: 0;
+    left: 0;
+    right: 0;
+    flex-direction: column;
+  }
+
+  main img {
+    width: 100%;
+    align-items: center;
+  }
+
+  .learn-text-box {
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .start-here {
+    width: 100%;
+  }
+
+}
+
 /* Info Rules */
 
 .information-container {
   display: flex;
   flex-flow: flex-start;
   width: 100%;
-  padding: 24px;
+  padding: 1.5rem;
   margin: 0 auto;
   background-color: lightgrey;
   left: 0;
@@ -126,7 +226,7 @@ main img {
 }
 
 .information-main {
-  padding-right: 24px;
+  padding-right: 1.5rem;
 }
 
 .information-main img {
@@ -146,7 +246,7 @@ main img {
 .info-child-container img {
   max-width: 35%;
   height: auto;
-  padding: 16px;
+  padding: 1rem;
 }
 
 
@@ -167,8 +267,48 @@ main img {
   align-content: center;
 }
 
-.info-text h3, a {
+.info-text h3 {
   color: #7F0200;
+}
+
+/* Responsive Info Rules */
+
+@media only screen and (max-width: 650px) {
+
+  .information-container {
+    padding: 0.5rem;
+    margin-bottom: 0;
+    left: 0;
+  }
+
+  .information-main {
+    display: none;
+  }
+
+  .information-main img {
+    display: none;
+  }
+
+  .information-main h2 {
+    display: none;
+  }
+
+  .info-child-container img {
+    flex-direction:column;
+    align-items:center;
+    max-width:100%;
+    border-radius:0;
+  }
+
+  .info-box {
+    flex-direction:column;
+    text-align: center;
+    max-width:100%;
+    border-radius:0;
+    margin-bottom: 1.5rem;
+    background-color: white;
+  }
+
 }
 
 
@@ -180,8 +320,8 @@ main img {
   background-color: whitesmoke;
   margin-top: 0;
   margin-left: 0;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
   left: 0;
 }
 
@@ -194,16 +334,11 @@ main img {
   justify-content: center;
 }
 
-.course-child:hover {
-  box-shadow: 0 0 10px;
-  transition: all 0.25s linear;
-}
-
 .course-child {
   margin: 0;
-  padding: 24px;
-  margin: 10px;
-  max-width: 300px;
+  padding: 1.5rem;
+  margin: 0.625rem;
+  max-width: 18.75rem;
   background-color: white;
 }
 
@@ -215,6 +350,33 @@ main img {
   color: #7F0200;
 }
 
+.course-child:hover {
+  box-shadow: 0 0 10px;
+  transition: all 0.25s linear;
+}
+
+/* Responsive Start Learning Rules */
+
+@media only screen and (max-width: 650px) {
+
+  .course-parent {
+    display: inline-flex;
+    flex-flow: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+  }
+  .course-child {
+    width: 100%;
+  }
+
+  .course-child p {
+    display: none;
+  }
+
+}
+
 
 /* Thesis Exhibit Rules */
 
@@ -222,14 +384,18 @@ main img {
   display: flex;
   flex-flow: flex-start;
   width: 100%;
-  padding: 24px;
+  padding: 1.5rem;
   margin: 0 auto;
   left: 0;
   right: 0;
   align-items: center;
   margin-top: 0;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.thesis-main {
+  padding-right: 1.5rem;
 }
 
 .thesis-exhibit {
@@ -237,16 +403,30 @@ main img {
   text-align: center;
 }
 
+/* Responsive Thesis Exhibit Rules */
+
+@media only screen and (max-width: 650px) {
+
+  .thesis-main video {
+    width: 101%;
+  }
+
+}
+
 /* Footer Rules */
 
 footer {
   width: 103%;
-  background-color: lightgrey;
-  padding-bottom: 6rem;
-  padding-top: 2rem;
-  display: flex;
+  height: 6.25rem;
+  padding-top: 1rem;
+  padding-left: 1.5rem;
+  padding-bottom: 1.5rem;
+  border-top: black 1px solid;
+  display: inline-flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-.terms {
-  margin-left: 1000px;
+footer span {
+  padding-left: 0.625rem;
 }
