--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,6 +49,11 @@ section {
 
 }
 
+@media only screen and (min-width: 650px) {
+  #mobileimage {
+    display: none;
+  }
+}
 /* Header Rules */
 
 header {
@@ -183,7 +188,7 @@ main img {
   transition: all 0.25s linear;
 }
 
-/* Banner Responsive Rules */
+/* Responsive Banner Rules */
 
 @media only screen and (max-width: 650px) {
 
@@ -193,17 +198,20 @@ main img {
     padding: 0;
     left: 0;
     right: 0;
+    display: flex;
     flex-direction: column;
   }
 
   main img {
     width: 100%;
     align-items: center;
+    margin-left: 0.5rem;
   }
 
   .learn-text-box {
     max-width: 100%;
     text-align: center;
+    margin-right: 1rem;
   }
 
   .start-here {
@@ -276,9 +284,13 @@ main img {
 @media only screen and (max-width: 650px) {
 
   .information-container {
+    width: 21rem;
     padding: 0.5rem;
     margin-bottom: 0;
     left: 0;
+    display: flex;
+    align-items:center;
+    flex-flow: column;
   }
 
   .information-main {
@@ -291,6 +303,10 @@ main img {
 
   .information-main h2 {
     display: none;
+  }
+
+  .info-child-container {
+    width: 20rem;
   }
 
   .info-child-container img {
